--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/nuwannnz/wordcloud_v4.git"
+    "url": "git@github.com:nuwannnz/rectangle-wordcloud-js.git"
   },
   "keywords": [
     "wordcloud",
@@ -16,5 +16,5 @@
   ],
   "author": "Nuwan Karunarathna",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/nuwannnz/wordcloud_v4#readme"
+  "homepage": "https://github.com/nuwannnz/rectangle-wordcloud-js/tree/publish"
 }
