--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rectangle-wordcloud",
   "version": "1.0.2",
   "description": "A javascipt package to create a rectangular shaped clickable wordcloud",
-  "main": "wordcloud_v5.js",
+  "main": "wordcloud_es2015.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
